syntax = "proto3";
package testing.car;

option go_package = "github.com/naufaldinta13/cars/protos";

message Car {
    int64   id      = 1;
	string  car_name    = 2;
    double  day_rate  = 3;
	double  month_rate  = 4;
    string  image       = 5;
}

message ShowRequest {
    string id = 1;
}

message CarResponse {
   Car car = 1;
}

service CarService {
    rpc Show (ShowRequest) returns (CarResponse) {}
}